syntax = "proto3";

package cart;

option go_package = "../;protos";

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}
  rpc RemoveItem(RemoveItemReq) returns (RemoveItemResp) {}
  rpc GetCart(GetCartReq) returns (GetCartResp) {}
}

message AddItemReq {
  int64 user_id = 1;
  int64 product_id = 2;
  string name = 3;
  int64 quantity = 4;
  double unit_price = 5;
}

message AddItemResp {
  bool success = 1;
  string message = 2;
}

message RemoveItemReq {
  int64 user_id = 1;
  int64 product_id = 2;
}

message RemoveItemResp {
  bool success = 1;
  string message = 2;
}

message GetCartReq {
  int64 user_id = 1;
}

message CartItem {
  int64 product_id = 1;
  string name = 2;
  int64 quantity = 3;
  double unit_price = 4;
}

message GetCartResp {
  repeated CartItem items = 1;
  double total_price = 2;
}