syntax = "proto3";

package order;

option go_package = "/order";

service OrderService {
  rpc PlaceOrder(PlaceOrderReq) returns(PlaceOrderResp){}
  rpc ProcessOrder(ProcessOrderReq) returns (ProcessOrderResp) {}
  rpc ListOrder(ListOrderReq) returns (ListOrderResp) {}
  rpc MarkOrderPaid(MarkOrderPaidReq) returns (MarkOrderPaidResp) {}
  rpc MarkOrderUnPaid(MarkOrderUnPaidReq) returns (MarkOrderUnPaidResp) {}
}


message PlaceOrderReq{
  repeated uint32 product_id = 1;
  repeated int32  quantity = 2;
  uint32 user_id =3;
}

message PlaceOrderResp{
  uint32 order_id =1;
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}

message OrderItem {
  uint32 product_id = 1;
  int32  quantity = 2;
}

message ProcessOrderReq {
  uint32 user_id = 1;
  string user_currency = 2;

  Address address = 3;
  string email = 4;
  repeated OrderItem order_items = 5;
  uint32 order_id=6;
}

message ProcessOrderResp {
  uint32 order_id =1;
}

message Order {
  repeated OrderItem order_items = 1;
  string order_id = 2;
  string user_currency = 3;
  Address address = 4;
  string email = 5;
}

message ListOrderReq {
  uint32 user_id = 1;
}

message ListOrderResp {
  repeated Order orders = 1;
}

message MarkOrderPaidReq {
  uint32 user_id = 1;
  string order_id = 2;
}

message MarkOrderPaidResp {}

message MarkOrderUnPaidReq {
  uint32 user_id = 1;
  string order_id = 2;
}

message MarkOrderUnPaidResp {}